feat: thread message
